# dl-project

./: README.md  SELD_evaluation_metrics.py  baseline_sed.ipynb  baseline_seld.ipynb  conformer.py  conformer_seld.ipynb  data_augmentation.py  data_explore.ipynb  datasets.py  multi_task.ipynb  multi_task.py  normalize_features.py  predictions_plot.ipynb  pyproject.toml  seld_net.py  utils.py
