[project]
name = "dl-project"
version = "0.1.0"
description = "Final Deep Learning course project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
